# catch-all-server-http

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  config.html  docker-compose.dev.yaml  docker-compose.yaml  docker.html  doctave.yaml  index.html  quickstart.html  search_index.json
.github/workflows/: deploy-docs.yml  docker-publish.yml  release-please.yml  release.yml
docs/: README.md  config.md  docker.md  quickstart.md
src/: args.rs  main.rs
