[package]
name = "catch-all-server-http"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
maud = { version = "0.27.0", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
