[package]
name = "catch-all-server-http"
version = "0.2.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
maud = { version = "0.27.0", features = ["actix-web"] }
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
colored = "3.0.0"
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive", "env"] }
hex = "0.4.3"
